src/styles/style.css
* {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    scrollbar-width: thin;
    scrollbar-color: rgb(255, 255, 255) rgb(0, 0, 0);
    scroll-behavior: smooth;
}

.close {
    overflow: hidden;
}

  @font-face {
    font-family: Bamchal;
    src: url(../fonts/MJ_BAMSHAD.TTF);
  } 
  @font-face {
    font-family: Home;
    src: url(../fonts/GILC____.TTF);
  } 
  @font-face {
    font-family: advertising;
    src: url(../fonts/advertising.TTF);
  }
  @font-face {
    font-family: argo;
    src: url(../fonts/argo.TTF);
  }
.mobileHeader {
    display: none;
}
.nav__button {
    display: none;
}
.nav {
    margin: 0 0 0 0;
    padding: 1rem 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0);
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    transition: 400ms;
    z-index: 100;
    font-family: Bamchal;
}
.scroll {
    background-color: rgba(0, 0, 0, 0.815);
    transition: 400ms;
    padding: 0 0;
}

.links {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
    align-items: center;
    margin: 0 4rem 0 0;
}
a {
    text-decoration: none;
    font-size: 20px;
    color: rgb(0, 0, 0);
    transition: 200ms;
    padding: 0 1rem;
    transition: 300ms;
}
.a img {
    width: 23px;
    margin: 0 7px 0 0;
}
.a:first-child  {
    font-family: Home;
    font-size: 35px;
    margin: 0 0 0 40px;
}
.a:first-child img  {
    width: 48px;
}
.scroll .a:hover, .a:hover, .nav__socials a:hover {
    color: rgb(83, 83, 83);
}
.scroll .a:first-child {
    margin: 0 0 0 10px;
}
.nav__socials {
    display: flex;
    margin: 10px 0 0 70px;
}
.nav__socials a {
    font-size: 35px;
}
.scroll .a, .scroll a {
    color: rgb(255, 255, 255);
}
.scroll .nav__socials {
    margin: 15px 0 0 70px;
}
.scroll .nav__socials a {
    font-size: 28px;
}

.home-1 {
    background-image: url(../new/home\ .....jpg);
    background-repeat: no-repeat;
    background-size: cover ;
    height: 106vh;
    margin: 0 0 0 0;
}
.home-1 .banner {
    width: 1150px;
    position: relative;
    top: 290px;
    left: 130px;
    height: 50vh;
}
.home-1 .up {
    font-family: advertising;
    font-size: 35px;
    letter-spacing: 35px;
    color: #010517da;
    margin: 0 0 0 10px;
    font-weight: bolder;
    transition: 400ms;
}
.up i {
    color: #cfcccc;
    font-style: normal;
    font-size: 40px;
}
.home-1 .khat {
    width: 1050px;
    height: 2px;
    background-color: #d9e8f8;
    transition: 400ms;
}
.home-1 .down {
    font-family: argo;
    font-size: 50px;
    display: flex;
    flex-direction: row-reverse;
    color: #18212e;
    margin: 12px 80px 0 0;
    transition: 400ms;
}
.down h5 {
    font-size: 50px;
    overflow: hidden;
    margin: 0 25px;
    font-stretch: extra-expanded;
}
.scroll_banner .down {
    transform: translate(-480px, -80px);
}
.scroll_banner .up {
    transform: translate(280px, 65px);
    letter-spacing: 20px;
}
.scroll_banner .khat {
    width: 900px;
    transform: translate(80px, 0);
}
.fourpages div {
    background-repeat: no-repeat;
    background-size: cover ;
    background-attachment: fixed;
    height: 105vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
}
.fourpages__head {
    flex: 8;
    font-size: 230px;
    font-weight: bolder;
    margin: -7rem 0 0 0;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}
.fourpages__def {
    color: white;
    flex: 1;
    display: flex;
    
}
.each__def {
    padding: 17px 0 0 0;
}
.fourpages__design {  
    background-image: url(../4pages/DESIGN\ 2.jpg);
    color: rgba(109, 255, 153, 0.425);
}
.fourpages__editing {  
    background-image: url(../4pages/EDITING_2.jpg);
    color: rgba(44, 179, 241, 0.486);
}
.fourpages__filming {  
    background-image: url(../4pages/FILMING.jpg);
    color: rgba(255, 158, 158, 0.356);
}
.fourpages__web {  
    background-image: url(../4pages/web.jpg);
    color: rgba(255, 255, 255, 0.356);
}

.team_container {
    overflow: hidden;
    width: 100%;
    display: flex;
    position: relative;
    
    align-items: center;
    
}
#lottie {
    overflow: hidden;
    left: 120px;
    position: relative;
}
.teamPage__poster {
    position: relative;
    left: -450px;
    top: -10px;
    padding: 0 10px;
    font-size: 9rem;
    color: #02f19a;
    opacity: 0.67;
    font-family: Bamchal;
    
}
.team__background {
    position: relative;
    left: -50px;
}
.team__background img {
    width: 900px;
}
.team {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 0.5rem 1rem;
    margin: 0 0 1rem 0;
    left: -200px;
}
.team__row {
    min-width: 300px;
    display: flex;
    flex-direction: column;
}
.team__row__head {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin: 10px 0;
}
.head__title {
    flex: 1;
    font-size: 20px;
    margin: 0 0rem 0 2rem;
}
.head__khat {
    flex: 2;
    background-color: #02f19a;
    height: 1px;
}
.team__row__body {
    display: flex;
}
.person {
    display: flex;
    justify-content: start;
    max-height: 5.2rem;
    align-items: center;
    margin: 10px 0;
    overflow: hidden;
    width: 250px;
}
.person .infos {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    overflow: hidden;
    width: 120px;
    padding: 1rem;
}
.person .name {
    width: 10rem;
    overflow: hidden;
    text-align: center;
    font-size: 1rem;
    font-weight: bolder;
}
.person .info {
    color: rgb(97, 96, 96);
    font-weight: bolder;
    font-size: 0.9rem;
    margin: 0 0 -0.6rem 0;
}
.person .img img {
    width: 5.1rem;
    filter: grayscale(100%);
}
.linebreake {
    width: 78%;
    margin: 0 auto 80px auto;
}
.linebreake.seccond{
    margin: 100px auto 80px auto;
}
.linebreake.third{
    margin: 0px auto 0px auto;
}
.samplePage__poster {
    position: relative;
    
    padding: 0 10px;
    font-size: 8rem;
    color: #02f19a;
    opacity: 0.67;
    font-family: Bamchal;
}
.poducts {
    background-color: rgb(255, 255, 255);
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    min-height: 70vh;
    margin: 3rem 0 0 0;
}
.products__col {
    position: relative;
    top: -10px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.products_row {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
}
.video_product {
    min-width: 25rem;
    overflow: hidden;
    margin: 1rem;
    transition: 350ms;
}
.primary_video {
    min-width: 40rem;
    border-radius: 15px;
}
.videos {
    margin: 30px 0 0 0;
    display: flex;
    
    flex-wrap: wrap;
    
}
.video_card {
    width: 300px;
    border-radius: 3px;
    margin: 0 0 20px 0px;
    transition: 400ms;
    overflow: hidden;
}
.video_card.delete {
    width: 0;
    margin: 0;
}
/* .filter-menu.video, .products__col {
    transform: translate(260px, 0);
}  */
.filter-menu {
    display: flex;
    justify-content: center;
    font-family: Sahel;
    margin: 1rem 0;
    transform: translate(-20px, 0);
}
.filter-menu li {
    font-size: 1.3rem;
    padding: 7px 15px;
    color: rgba(129, 129, 129, 0.753);
    margin: 0 1.5rem;
    transition: 300ms;
    font-family: Bamchal;
}
.filter-menu li.current {
    text-decoration: line-through #02f19996 2px;
    color: rgb(0, 0, 0);
    font-size: 1.9rem;
    transform: translate(0, -15px);
}
.filter-menu li:hover {
    color: rgb(54, 54, 54);
    cursor: pointer;
    
}
.contain_card.delete {
    width: 0;
    height: 0;
    margin-left: -1rem;
    transition: all .4s ease;
    opacity: 0;
}

.typography {
    min-height: 160vh;
    background-color: black;
    background-image: url(../typo.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: 203vh 110vh ;
}
.aboutPage {
    height: 100vh;
    display: flex;
    align-items: center;
    background-color: #ffffff; 
    background-image: url(../cam/tw\ cam\ 2.jpg);
    background-repeat: no-repeat;
    background-size: contain ;
    background-position: -340px -30px;

    transition: 2s;
}


.aboutPage__poster {
    font-size: 6rem;
    font-weight: bolder;
    text-transform: uppercase;
    min-width: 50%;
    color: #02f19a;
    opacity: 0.67;
    display: flex;
    justify-content: center;
    align-items: center;
    font-stretch: expanded;
    
    font-family: Bamchal;
}
.aboutPage__col {
    width: 30rem;
    display: flex;
    flex-direction: column;
    margin: 0 0 0 200px;
}
.aboutPage__col i {
    font-size: 4.5rem;
    color: #02f19a;
    opacity: 0.67;
}
.col__qout {
    font-size: 1.7rem;
    max-width: 17rem;
    font-weight: bolder;
    color: rgb(80, 80, 80);
    line-height: 30px;
    font-stretch: expanded;
    text-transform: uppercase;
    margin: 0 0 3rem 0;
    overflow: hidden;
}
.col__def {
    max-width: 21rem;
    margin: 0 0 2rem 0;
}
.contactPage {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(255, 255, 255);
    flex-direction: column;
    gap: 50px;
    width: 100%;
    min-height: 80vh;
}
.contactPage__info {
    text-align: center;
    color: rgb(131, 131, 131);
    display: flex;
    
    justify-content: space-evenly;
    width: 900px;
}
.contactPage__info i {
    font-size: 40px;
}
.contactPage__form {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 20px;
    font-family: Bamchal;
}
.form_info {
    display: flex;
    gap: 40px;
    flex-direction: row-reverse;
    align-items: center;
    width: 900px;
}
.form_info input, textarea {
    border: rgb(190, 190, 190) 1px solid;
}
.form_info input:focus, textarea:focus {
    border: rgb(0, 0, 0) 1px solid;
}
.contactPage__form input {
    width: 98%;
    height: 58px;
} 
.contactPage__form .botton {
    margin: 0px auto 0 0;
    text-decoration: none;
    border: black 6px solid;
    width: 150px;
    height: 50px;
    color: white;
    background-color: black;
    transition: 200ms;
} 
.contactPage__form .botton:hover {
    color: black;
    background-color: white;
}
form .textArea {
    margin: 0 ;
    padding: 0;
    
}
form .textArea textarea {
    padding: 10px;
    resize: none;
    width: 450px;
    height: 138px;
}
.form_buttom {
    display: flex;
    flex-direction: row-reverse;
    color: rgb(139, 139, 139);
}
.name_email {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 20px;
    width: 80%;
    max-width: 350px;
    
}
input[type='text'], input[type='email'], textarea {
    text-align:right;
}
    

